Add search functionality and feature flag for filter sidebar in Subject List