@@ -1,5 +1,6 @@
 package es.hugoalvarezajenjo.selecta.ui.subject.user.list;
 
+import es.hugoalvarezajenjo.selecta.config.FeatureFlagConfig;
 import es.hugoalvarezajenjo.selecta.services.subjects.Subject;
 import es.hugoalvarezajenjo.selecta.services.subjects.SubjectService;
 import es.hugoalvarezajenjo.selecta.services.types.Languages;
@@ -9,22 +10,40 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/subjects")
 @RequiredArgsConstructor
 public class SubjectListController {
     final SubjectService subjectService;
+    private final FeatureFlagConfig featureFlagConfig;
 
     @GetMapping
-    private String subjectListView(final Model model) {
-        model.addAttribute(
-                "subjects",
-                this.subjectService.getAllSubjects().stream().map(SubjectListController::mapToDTO).toList()
-        );
+    private String subjectListView(
+            @RequestParam(value = "search", required = false) final String searchQuery,
+            final Model model) {
+        final List<Subject> allSubjects = this.subjectService.getAllSubjects();
+        List<Subject> filteredSubjects;
+
+        // TODO: Use a predicate base system
+        if (searchQuery != null && !searchQuery.trim().isEmpty()) {
+            filteredSubjects = allSubjects.stream()
+                    .filter(subject -> subject.getName().toLowerCase().contains(searchQuery.toLowerCase()))
+                    .collect(Collectors.toList());
+        } else {
+            filteredSubjects = allSubjects;
+        }
+
+        model.addAttribute("subjects", filteredSubjects.stream()
+                .map(SubjectListController::mapToDTO).toList());
+        model.addAttribute("filterMenuEnabled", this.featureFlagConfig.isFilterListEnabled());
+        model.addAttribute("searchQuery", searchQuery != null ? searchQuery : "");
+
         return "subject/user/list";
     }
 
